# CodexElves

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  README_EN.md  build.ps1
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: pr-build.yml  release-assets.yml
.zeroone/hook-debug/: stop-await-submission.ndjson
.zeroone/requirement/remove-home-promotions/: clarification.md  process-ledger.md  source-prd.md  spec.md  technical-design.md
apps/codex-elves-launcher/: Cargo.toml  build.rs
apps/codex-elves-launcher/src/: main.rs
apps/codex-elves-manager/: index.html  package-lock.json  package.json
apps/codex-elves-manager/src/: App.tsx  modelContextWindows.ts  presets.ts  styles.css
apps/codex-elves-manager/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/codex-elves-manager/src-tauri/capabilities/: default.json
apps/codex-elves-manager/src-tauri/permissions/: default.toml
apps/codex-elves-manager/src-tauri/src/: commands.rs  install.rs  lib.rs  main.rs
apps/codex-elves-manager/src-tauri/tests/: windows_subsystem.rs
apps/codex-plus-launcher/src/: main.rs
apps/codex-plus-manager/src/: App.tsx  styles.css
assets/inject/: renderer-features.js  renderer-inject.js
crates/codex-elves-core/: Cargo.toml
crates/codex-elves-core/assets/: codex-models.json
crates/codex-elves-core/src/: app_paths.rs  assets.rs  bridge.rs  ccs_import.rs  cdp.rs  cli_wrapper.rs  codex_home.rs  codex_radar.rs  codex_sqlite.rs  computer_use_guard.rs  continue_thinking.rs  diagnostic_log.rs  http_client.rs  launcher.rs  layered_compaction.rs  lib.rs  log_limits.rs  model_catalog.rs  models.rs  paths.rs  plugin_marketplace.rs  ports.rs  protocol_proxy.rs  proxy_log.rs  relay_config.rs  relay_switch.rs  remote_ssh.rs  responses_websocket.rs  responses_websocket_bridge.rs  routes.rs  script_market.rs  settings.rs  status.rs  suppressed_threads.rs  update.rs  user_scripts.rs  watcher.rs
crates/codex-elves-core/tests/: bridge_routes.rs  cdp_bridge.rs  cli_wrapper.rs  installers.rs  launcher.rs  model_catalog.rs  protocol_proxy.rs  relay_config.rs  relay_rotation.rs  relay_switch.rs  responses_websocket.rs  updater.rs  upstream_worktree.rs  watcher.rs
crates/codex-elves-data/: Cargo.toml
crates/codex-elves-data/src/: backup.rs  lib.rs  markdown.rs  provider_sync.rs  storage.rs
docs/: protocol-proxy-dev-real-smoke.md  protocol-proxy-web-search.md
docs/release/: 20260602191421483_token统计历史恢复bridge发布说明.md
scripts/: build-windows-installer.ps1  dev-codex-real-smoke.ps1  dev-manager.ps1  generate-release-notes.mjs
(+31 files in other folders)
