[package]
name = "codex-elves-launcher"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "codex-elves"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-trait = "0.1"
codex-elves-core = { path = "../../crates/codex-elves-core" }
codex-elves-data = { path = "../../crates/codex-elves-data" }
directories.workspace = true
serde_json.workspace = true
tokio.workspace = true

[build-dependencies]
winresource.workspace = true
